@@ -11,9 +11,11 @@ bool SRT::toASS( const QByteArray &srt, LibASS *ass, double )
 {
 	if ( !ass )
 		return false;
-	bool ok = false;
 
-	foreach ( const QString &entry, QString( QString( "\n\n" ) + srt ).remove( '\r' ).split( QRegExp( "\n\n\\d+\n" ), QString::SkipEmptyParts ) )
+	bool ok = false;
+	const char *scanfFmt = ( srt.left( 11 /* Including BOM */ ).contains( "WEBVTT" ) ) ? "%d:%d:%d.%d" : "%d:%d:%d,%d";
+
+	foreach ( const QString &entry, QString( QString( "\n\n" ) + srt ).remove( '\r' ).split( QRegExp( "\n\n+(\\d+\n)?" ), QString::SkipEmptyParts ) )
 	{
 		int idx = entry.indexOf( '\n' );
 		if ( idx > -1 )
@@ -25,7 +27,7 @@ bool SRT::toASS( const QByteArray &srt, LibASS *ass, double )
 				for ( int i = 0 ; i < 2 ; ++i )
 				{
 					int h = -1, m = -1, s = -1, ms = -1;
-					sscanf( time[ i ].toUtf8().data(), "%d:%d:%d,%d", &h, &m, &s, &ms );
+					sscanf( time[ i ].toLatin1().data(), scanfFmt, &h, &m, &s, &ms );
 					if ( h > -1 && m > -1 && s > -1 && ms > -1 )
 						time_double[ i ] = h*3600 + m*60 + s + ms/1000.0;
 					else
