@@ -1,4 +1,5 @@
 Changes in QMPlay2 build 15.09.10:
+	- basic WebVTT subtitles support (SRT module),
 	- small bugfix,
 
 Changes in QMPlay2 build 15.08.12:
